[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/UI/Menu/MenuOptions.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/Menu/MenuPlay.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/Menu/MenuMain.gd" type="Script" id=3]
[ext_resource path="res://src/UI/Menu/MenuButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://res/titlescreen.png" type="Texture" id=5]
[ext_resource path="res://src/UI/Menu/MenuControls.tscn" type="PackedScene" id=6]
[ext_resource path="res://res/1x1-white.png" type="Texture" id=7]
[ext_resource path="res://src/UI/res/menu_font_small.tres" type="DynamicFont" id=8]
[ext_resource path="res://src/UI/res/menu_font.tres" type="DynamicFont" id=10]
[ext_resource path="res://res/particles/64s.png" type="Texture" id=11]

[sub_resource type="Gradient" id=13]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=14]
gradient = SubResource( 13 )

[sub_resource type="Curve" id=11]
max_value = 2.0
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.505435, 0.0454545 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 2
emission_box_extents = Vector3( 640, 480, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 15.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 9 )
color_ramp = SubResource( 14 )

[sub_resource type="Animation" id=15]
resource_name = "pulse"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:energy")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.5, 9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.95, 1.2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D2:energy")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5, 8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.2, 0.9 ]
}

[sub_resource type="Theme" id=1]
Label/fonts/font = ExtResource( 10 )

[node name="TitleScreen" type="CanvasLayer"]
layer = 0

[node name="Background" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="Sprite" parent="Background"]
modulate = Color( 0.0313726, 0.0313726, 0.0313726, 1 )
light_mask = 17
position = Vector2( 640, 360 )
scale = Vector2( 1280, 720 )
z_index = -10
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Particles2D" type="Particles2D" parent="Background"]
modulate = Color( 1, 1, 1, 0.258824 )
position = Vector2( 640, 360 )
amount = 32
lifetime = 2.0
speed_scale = 0.1
process_material = SubResource( 12 )
texture = ExtResource( 11 )

[node name="Light2D" type="Light2D" parent="Background"]
position = Vector2( 64, 64 )
texture = ExtResource( 11 )
texture_scale = 10.0
color = Color( 0, 0.486275, 1, 1 )
energy = 1.1407
range_item_cull_mask = 16

[node name="Light2D2" type="Light2D" parent="Background"]
position = Vector2( 1216, 64 )
texture = ExtResource( 11 )
texture_scale = 10.0
color = Color( 0.839216, 0.168627, 0.168627, 1 )
energy = 0.964351
range_item_cull_mask = 16

[node name="Animator" type="AnimationPlayer" parent="Background"]
autoplay = "pulse"
anims/pulse = SubResource( 15 )

[node name="MenuMain" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Sprite" parent="MenuMain"]
light_mask = 16
position = Vector2( 640, 360 )
z_index = -5
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Buttons" type="VBoxContainer" parent="MenuMain"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Play" parent="MenuMain/Buttons" instance=ExtResource( 4 )]
margin_top = 78.0
margin_right = 1280.0
margin_bottom = 126.0
theme = SubResource( 1 )
text = "Play"

[node name="Options" parent="MenuMain/Buttons" instance=ExtResource( 4 )]
margin_top = 130.0
margin_right = 1280.0
margin_bottom = 178.0
theme = SubResource( 1 )
text = "Options"

[node name="Controls" parent="MenuMain/Buttons" instance=ExtResource( 4 )]
margin_top = 182.0
margin_right = 1280.0
margin_bottom = 230.0
theme = SubResource( 1 )
text = "Controls"

[node name="Exit" parent="MenuMain/Buttons" instance=ExtResource( 4 )]
margin_top = 234.0
margin_right = 1280.0
margin_bottom = 282.0
theme = SubResource( 1 )
text = "Exit"

[node name="MenuPlay" parent="MenuMain" instance=ExtResource( 2 )]
visible = false

[node name="MenuOptions" parent="MenuMain" instance=ExtResource( 1 )]
visible = false

[node name="MenuControls" parent="MenuMain" instance=ExtResource( 6 )]
visible = false

[node name="Info" type="Control" parent="MenuMain"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Version" type="Label" parent="MenuMain/Info"]
modulate = Color( 1, 1, 1, 0.196078 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -34.0
margin_right = 320.0
margin_bottom = -8.0
custom_fonts/font = ExtResource( 8 )
text = "v1.0.0"

[node name="Author" type="Label" parent="MenuMain/Info"]
modulate = Color( 1, 1, 1, 0.196078 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -108.0
margin_top = -26.0
margin_right = -8.0
margin_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = ExtResource( 8 )
text = "@viraelin"
align = 1
valign = 1
